example/multirender/rendered/template-rendered..yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  Environment:
    Type: String
    Default: prod
    AllowedValues: [dev, prod]
  ServicePath:
    Type: String
    Default: "api"
  ExistingSecurityGroups:
    Type: List<AWS::EC2::SecurityGroup::Id>
  ExistingVPC:
    Type: AWS::EC2::VPC::Id
    Description: The VPC ID that includes the security groups in the ExistingSecurityGroups parameter.
    Default: "test"
  InstanceType:
    Type: String
    Default: c6g.small
    AllowedValues:
      - t2.micro
      - m1.small
  RootDomainName:
    Type: String
    Default: example.com
Conditions:
  IsProduction: true
  CreateProdResources: false
  IsNotProdEnvironment: false
Mappings:
  AWSInstanceType2Arch:
    t2.micro:
      Arch: HVM64
    m1.small:
      Arch: HVM64
  AWSRegionArch2AMI:
    us-east-1:
      HVM64: ami-0ff8a91507f77f867
      HVMG2: ami-0a584ac55a7631c0c
    us-west-2:
      HVM64: ami-a0cfeed8
      HVMG2: ami-0e09505bc235aa82d
    us-west-1:
      HVM64: ami-0bdb828fd58c52235
      HVMG2: ami-066ee5fd4a9ef77f1
    eu-west-1:
      HVM64: ami-047bb4163c506cd98
      HVMG2: ami-0a7c483d527806435
    eu-central-1:
      HVM64: ami-0233214e13e500f77
      HVMG2: ami-06223d46a6d0661c7
    ap-northeast-1:
      HVM64: ami-06cd52961ce9f0d85
      HVMG2: ami-053cdd503598e4a9d
    ap-southeast-1:
      HVM64: ami-08569b978cc4dfa10
      HVMG2: ami-0be9df32ae9f92309
    ap-southeast-2:
      HVM64: ami-09b42976632b27e9b
      HVMG2: ami-0a9ce9fecc3d1daf8
    sa-east-1:
      HVM64: ami-07b14488da8ea02a0
      HVMG2: NOT_SUPPORTED
    cn-north-1:
      HVM64: ami-0a4eaf6c4454eda75
      HVMG2: NOT_SUPPORTED
Resources:
  ExampleVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 192.168.0.0/24
  ExampleSubnet:
    Type: AWS::EC2::Subnet
    DependsOn: IPv6CidrBlock
    Properties:
      CidrBlock: 192.168.0.0/27
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP traffic to the host
      VpcId: IUJhc2U2NA==
      ExistingVPC:
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  AllSecurityGroups:
    Type: Custom::Split
    Properties: &id001
      ServiceToken: !GetAtt AppendItemToListFunction.Arn
      List: !Ref ExistingSecurityGroups
      AppendedItem: SecurityGroup
  AppendItemToListFunction:
    Type: AWS::Lambda::Function
    Properties:
      Handler: index.handler
      Role: !GetAtt LambdaExecutionRole.Arn
      Code:
        ZipFile: "var response = require('cfn-response');exports.handler = function(event, context) {   var responseData = {Value: event.ResourceProperties.List};   responseData.Value.push(event.ResourceProperties.AppendedItem);   response.send(event, context, response.SUCCESS, responseData);};"
      Runtime: nodejs20.x
      LoggingConfig:
        LogGroup: "MyLambdaLogGroup"
  MyLambdaLogGroup:
    Type: "AWS::Logs::LogGroup"
    Properties:
      LogGroupClass: "Infrequent Access"
      RetentionInDays: 30
  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
      SecurityGroupIds: *id001
      InstanceType: c6g.small
  LambdaExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: root
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - logs:*
                Resource: arn:aws:logs:*:*:*
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "SSH security group for ${AWS::StackName}"
  WWWBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: 'www.example.com/api'
  SnsTopicSuccess:
    Type: 'AWS::SNS::Topic'
    Properties:
      FifoTopic: true
      TopicName: 'Success.fifo'
  SnsTopicFailure:
    Type: 'AWS::SNS::Topic'
    Properties:
      FifoTopic: true
      TopicName: 'Failure.fifo'
  SnsTopicTimeout:
    Type: 'AWS::SNS::Topic'
    Properties:
      FifoTopic: true
      TopicName: 'Timeout.fifo'
  SnsTopicUnknown:
    Type: 'AWS::SNS::Topic'
    Properties:
      FifoTopic: true
      TopicName: 'Unknown.fifo'
Outputs:
  AllSecurityGroups:
    Description: Security Groups that are associated with the EC2 instance
    Value: ServiceToken, List, AppendedItem
  JsonTest: '{"key1": "value1", "key2": "c6g.small"}'
  WebServerSecurityGroup:
    Description: The security group ID to use for public web servers
    Value:
  HasExactlyThreeSubnets: true
